Hide WiFi info if it has been disabled

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
               </form>
             </div>
             <div class="settings-tab is-hidden" id="settings-wifi">
-              <p>Join other devices to the WiFi network by using the details below or scanning the QR Code</p>
-              <div class="grid" id="wifi-info">
+              <div class="grid is-hidden" id="wifi-info">
                 <div class="cell has-text-centered-desktop is-align-content-center">
+                  <p>Join other devices to the WiFi network by using the details below or scanning the QR Code</p>
                   <p>WiFi Network: <code data-from-metadata="wifi_ssid"></code></p>
                   <p>WiFi Password: <code data-from-metadata="wifi_psk"></code></p>
                   <p class="mt-3">These settings can be changed by editing <code>robot-settings.toml</code></p>
