Fix WiFi tab layout

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </form>
             </div>
             <div class="settings-tab is-hidden" id="settings-wifi">
-              <div class="grid is-hidden" id="wifi-info">
+              <div class="grid" id="wifi-info">
                 <div class="cell has-text-centered-desktop is-align-content-center">
                   <p>Join other devices to the WiFi network by using the details below or scanning the QR Code</p>
                   <p>WiFi Network: <code data-from-metadata="wifi_ssid"></code></p>
