Re-add line wrapping

--- a/index.html
+++ b/index.html
@@ -289,6 +289,14 @@
                   </div>
                 </div>
               </div>
+              <div class="field">
+                <div class="control">
+                  <label class="checkbox">
+                    <input type="checkbox" data-setting="wrapLines" />
+                    Wrap long lines
+                  </label>
+                </div>
+              </div>
             </div>
             <div class="settings-tab is-hidden" id="settings-about">
               <div class="columns">
